--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script
-      src="https://unpkg.com/react@18/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      crossorigin
-    ></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
@@ -16,61 +10,106 @@
 
     <script type="text/babel">
       function Page() {
+        const [times, setTimes] = React.useState([
+          { nome: "Flamengo", gols: 0, pontos: 0 },
+          { nome: "Vasco", gols: 0, pontos: 0 },
+          { nome: "Palmeiras", gols: 0, pontos: 0 },
+          { nome: "Corinthians", gols: 0, pontos: 0 },
+        ]);
+
+        const [mostrarTabela, setMostrarTabela] = React.useState(false);
+
+        const jogos = [
+          { time1: 0, time2: 1 }, // Flamengo x Vasco
+          { time1: 2, time2: 3 }, // Palmeiras x Corinthians
+        ];
+
+        function adicionarGol(index) {
+          const novosTimes = [...times];
+          novosTimes[index].gols += 1;
+          setTimes(novosTimes);
+        }
+
+        function finalizarJogo(i1, i2) {
+          const novosTimes = [...times];
+          const gols1 = novosTimes[i1].gols;
+          const gols2 = novosTimes[i2].gols;
+
+          // Zera os pontos antes de computar de novo
+          novosTimes[i1].pontos = 0;
+          novosTimes[i2].pontos = 0;
+
+          if (gols1 > gols2) {
+            novosTimes[i1].pontos = 3;
+          } else if (gols2 > gols1) {
+            novosTimes[i2].pontos = 3;
+          } else {
+            novosTimes[i1].pontos = 1;
+            novosTimes[i2].pontos = 1;
+          }
+
+          setTimes(novosTimes);
+        }
+
+        const tabelaOrdenada = [...times].sort((a, b) =>
+          b.pontos !== a.pontos ? b.pontos - a.pontos : b.gols - a.gols
+        );
+
         return (
           <div>
-            <h1>Contador</h1>
-            <MyButton />
-            <MyButton />
-            <MyButton />
+            <h1>Jogos</h1>
+
+            {jogos.map((jogo, idx) => (
+              <div key={idx}>
+                <h2>Jogo {idx + 1}</h2>
+                <Time
+                  nome={times[jogo.time1].nome}
+                  gols={times[jogo.time1].gols}
+                  onAdd={() => adicionarGol(jogo.time1)}
+                />
+                {" X "}
+                <Time
+                  nome={times[jogo.time2].nome}
+                  gols={times[jogo.time2].gols}
+                  onAdd={() => adicionarGol(jogo.time2)}
+                />
+                <button onClick={() => finalizarJogo(jogo.time1, jogo.time2)}>
+                  Finalizar Jogo
+                </button>
+              </div>
+            ))}
+
+            <button onClick={() => setMostrarTabela(!mostrarTabela)}>
+              {mostrarTabela ? "Ocultar Tabela" : "Mostrar Tabela de Liderança"}
+            </button>
+
+            {mostrarTabela && (
+              <div>
+                <h2>Tabela de Liderança</h2>
+                <ol>
+                  {tabelaOrdenada.map((time, index) => (
+                    <li key={index}>
+                      {time.nome} – {time.pontos} pts ({time.gols} gols)
+                    </li>
+                  ))}
+                </ol>
+              </div>
+            )}
           </div>
         );
       }
 
-      function MyButton() {
-        return <button>Eu sou um botão</button>;
+      function Time({ nome, gols, onAdd }) {
+        return (
+          <button onClick={onAdd}>
+            {nome} {gols}
+          </button>
+        );
       }
 
       const container = document.getElementById("mydiv");
       const root = ReactDOM.createRoot(container);
       root.render(<Page />);
     </script>
-  <!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
-</body>
+  </body>
 </html>
